# better-screenshoot

./: .env.example  .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.cursor/rules/: git-branching.mdc
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/scripts/: check-locales.mjs
apps/desktop/src/: App.vue  main.ts  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/locales/: de.json  en.json  es.json  fr.json  it.json  pt.json
apps/desktop/src-tauri/src/: app_log.rs  capture_prep.rs  capture_session.rs  deep_link.rs  errors.rs  lib.rs  main.rs  shortcuts.rs  state.rs  system_capture.rs  system_shortcuts.rs  tray.rs  window_activation.rs  window_front.rs  window_layout.rs
apps/desktop/src-tauri/src/commands/: autostart.rs  capture.rs  history.rs  licensing.rs  mod.rs  permissions.rs  settings.rs  system_shortcuts.rs
apps/desktop/src/components/: AppUpdatePrompt.vue  PendingCaptureBanner.vue
apps/desktop/src/composables/: useAppUpdater.ts  useAppearance.spec.ts  useAppearance.ts  useCapturePermissions.test.ts  useCapturePermissions.ts  useEditorEvents.spec.ts  useEditorEvents.ts  useEditorHistory.spec.ts  useEditorHistory.ts  useEditorLayout.ts  useEditorLifecycle.spec.ts  useEditorLifecycle.ts  useEditorShortcuts.ts  usePendingCaptureRecovery.spec.ts  usePendingCaptureRecovery.ts
apps/desktop/src/i18n/: index.test.ts  index.ts  resolveError.ts  types.ts
apps/desktop/src/layouts/: MainLayout.vue
apps/desktop/src/lib/: editor-export.test.ts  editor-export.ts  editor-window.test.ts  editor-window.ts  format-hotkey.test.ts  format-hotkey.ts  licensing-i18n.ts  load-capture-image.test.ts  load-capture-image.ts  main-window-guard.test.ts  main-window-guard.ts  permission-presentation.spec.ts  permission-presentation.ts  system-shortcut-labels.ts  tauri.test.ts  tauri.ts  (+2 more)
cli/: Cargo.toml  package.json
cli/src/: main.rs
docs/: api.md  branching.md  i18n.md  release-install-notes.md
homebrew-tap/Casks/: better-screenshoot.rb
scripts/: generate-latest-json.mjs  raycast-dev.sh  release-mac.sh  setup-branch-protection.sh  sync-version.mjs
(+48 files in other folders)
