[workspace]
members = [
  "packages/capture-core",
  "apps/desktop/src-tauri",
  "cli",
]
resolver = "2"

[workspace.package]
version = "0.3.1"
edition = "2021"
license = "MIT"
authors = ["Better Screenshoot"]

[workspace.dependencies]
capture-core = { path = "packages/capture-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
image = "0.25"
xcap = "0.9"
