[package]
name = "better-screenshoot-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI for Better Screenshoot"

[[bin]]
name = "better-screenshoot-cli"
path = "src/main.rs"

[dependencies]
capture-core = { workspace = true }
clap = { version = "4", features = ["derive"] }
serde_json = { workspace = true }
base64 = "0.22"
dirs = "6"
open = "5"
